--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                                         <span class="date">2023年5月16日</span>
                                     </div>
                                     <div class="timeline-body">
-                                        <p>BR的香水我挺喜欢的，希望潘宝宝喜欢</p>
+                                        <p>这个牌子的香水我挺喜欢的，希望潘宝宝喜欢</p>
                                     </div>
                                 </div>
                             </li>
@@ -513,32 +513,6 @@
                                 <div class="timeline-badge" style="background-image:url(images/couple_7.jpg);"></div>
                                 <div class="timeline-panel">
                                     <div class="timeline-heading">
-                                        <h3 class="timeline-title">宝宝给我庆祝生日辣</h3>
-                                        <span class="date">2024年4月23日</span>
-                                    </div>
-                                    <div class="timeline-body">
-                                        <p>收到了一封很真挚的信，我好感动。第一次有人这么爱我，我真的好开心，我都有点不知所措了。我好爱我的女朋友。</p>
-                                    </div>
-                                </div>
-                            </li>
-                            <!-- Timeline Item 14 -->
-                            <li class="timeline-inverted animate-box">
-                                <div class="timeline-badge" style="background-image:url(images/couple_8.jpg);"></div>
-                                <div class="timeline-panel">
-                                    <div class="timeline-heading">
-                                        <h3 class="timeline-title">过520辣</h3>
-                                        <span class="date">2024年5月20日</span>
-                                    </div>
-                                    <div class="timeline-body">
-                                        <p>过520了，好可惜是异地。</p>
-                                    </div>
-                                </div>
-                            </li>
-                            <!-- Timeline Item 13 -->
-                            <li class="animate-box">
-                                <div class="timeline-badge" style="background-image:url(images/couple_7.jpg);"></div>
-                                <div class="timeline-panel">
-                                    <div class="timeline-heading">
                                         <h3 class="timeline-title">过六一儿童节了</h3>
                                         <span class="date">2024年6月1日</span>
                                     </div>
@@ -617,32 +591,6 @@
                                 <div class="timeline-badge" style="background-image:url(images/couple_7.jpg);"></div>
                                 <div class="timeline-panel">
                                     <div class="timeline-heading">
-                                        <h3 class="timeline-title">宝宝去西安照相了</h3>
-                                        <span class="date">2024年6月12日</span>
-                                    </div>
-                                    <div class="timeline-body">
-                                        <p>好家伙，宝宝真好看啊。这个头饰真的挺好看的。</p>
-                                    </div>
-                                </div>
-                            </li>
-                            <!-- Timeline Item 14 -->
-                            <li class="timeline-inverted animate-box">
-                                <div class="timeline-badge" style="background-image:url(images/couple_8.jpg);"></div>
-                                <div class="timeline-panel">
-                                    <div class="timeline-heading">
-                                        <h3 class="timeline-title">宝宝说她以后可能要来美国读博士</h3>
-                                        <span class="date">2024年7月22日</span>
-                                    </div>
-                                    <div class="timeline-body">
-                                        <p>要是宝宝能和我在一个城市读书，我得有多开心。</p>
-                                    </div>
-                                </div>
-                            </li>
-                            <!-- Timeline Item 13 -->
-                            <li class="animate-box">
-                                <div class="timeline-badge" style="background-image:url(images/couple_7.jpg);"></div>
-                                <div class="timeline-panel">
-                                    <div class="timeline-heading">
                                         <h3 class="timeline-title">潘奕男有研究生的offer了</h3>
                                         <span class="date">2024年7月22日</span>
                                     </div>
@@ -654,19 +602,6 @@
                             <!-- Timeline Item 14 -->
                             <li class="timeline-inverted animate-box">
                                 <div class="timeline-badge" style="background-image:url(images/couple_8.jpg);"></div>
-                                <div class="timeline-panel">
-                                    <div class="timeline-heading">
-                                        <h3 class="timeline-title">宝宝说她以后可能要来美国读博士</h3>
-                                        <span class="date">2024年7月22日</span>
-                                    </div>
-                                    <div class="timeline-body">
-                                        <p>要是宝宝能和我在一个城市读书，我得有多开心。</p>
-                                    </div>
-                                </div>
-                            </li>
-                            <!-- Timeline Item 13 -->
-                            <li class="animate-box">
-                                <div class="timeline-badge" style="background-image:url(images/couple_7.jpg);"></div>
                                 <div class="timeline-panel">
                                     <div class="timeline-heading">
                                         <h3 class="timeline-title">在一起一年辣</h3>
