--- a/index.html
+++ b/index.html
@@ -838,10 +838,10 @@
             month: 9,     // Start date month
             day: 7,       // Start date day
             words: {
-                days: 'days',
-                hours: 'hours',
-                minutes: 'minutes',
-                seconds: 'seconds',
+                days: 'day',
+                hours: 'hour',
+                minutes: 'minute',
+                seconds: 'second',
                 pluralLetter: 's'
             },
             plural: true,
