--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
                             <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/xian3.jpg); ">
                                 <a href="images/xian3.jpg">
                                     <div class="case-studies-summary">
-                                        <h2>潘贵妃</h2>
+                                        <h2>潘公主</h2>
                                     </div>
                                 </a>
                             </li>
